--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -18,6 +18,15 @@
     /* --bs-btn-active-bg: var(--main-color); */
     --bs-border-color: var(--border-color);
     --bs-nav-tabs-link-active-border-color: var(--border-color);
+
+
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: var(--main-color);
+    --bs-btn-active-border-color: var(--main-color);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: var(--main-color);
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: var(--main-color);
 }
 
 /* Animation for notification icon using filter instead of transform */
@@ -109,8 +118,11 @@ h3 {
     --bs-btn-disabled-color: var(--main-color);
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: var(--main-color);
-
+    --bs-gradient: none;
 }
+
+
+
 
 .side-news,
 .maing-news {
@@ -2841,4 +2853,78 @@ content: none !important;
  }
   .dropdown-menu.mega-menu li {
      border-bottom:unset !important;}
+}
+/* People Card Styles */
+.people-card {
+    position: relative;
+    transition: all 0.3s ease;
+    cursor: pointer;
+        overflow: hidden;
+        min-height: 370px;
+            display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.people-card .card-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    background: var(--card-color);
+    border-radius: 8px;
+}
+.people-card .card-back .profile-img{
+    width: 70px;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+.people-card:hover .card-back {
+    opacity: 1;
+    visibility: visible;
+}
+
+.people-card .contact-options {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+
+}
+
+.people-card .contact-options a {
+  text-decoration: none !important;
+  border-radius: 10px;
+  border:1px solid var(--card-color);
+}
+
+.people-card .contact-options a svg path{
+fill: var(--main-color);
+}
+.people-card .contact-options a span {
+color: var(--head-color) !important;
+text-decoration: none;
+
+
+}
+
+.people-card .contact-options a:hover {
+  
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+}
+.people-card .contact-options a:hover span {
+    color: var(--main-color) !important;
+}
+
+.report-to{
+  border-bottom: 1px solid var(--border-color);
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-top:1px solid var(--border-color);;
 }
