--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2876,7 +2876,7 @@ content: none !important;
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease;
-    background: var(--card-color);
+    background: var(--card-color) !important;
     border-radius: 8px;
 }
 .people-card .card-back .profile-img{
