--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2890,35 +2890,35 @@ content: none !important;
     visibility: visible;
 }
 
-.people-card .contact-options {
+  .contact-options {
     display: flex;
     justify-content: start;
     align-items: center;
 
 }
 
-.people-card .contact-options a {
+ .contact-options a {
   text-decoration: none !important;
   border-radius: 10px;
   border:1px solid var(--card-color);
 }
 
-.people-card .contact-options a svg path{
+ .contact-options a svg path{
 fill: var(--main-color);
 }
-.people-card .contact-options a span {
+  .contact-options a span {
 color: var(--head-color) !important;
 text-decoration: none;
 
 
 }
 
-.people-card .contact-options a:hover {
+.contact-options a:hover {
   
     color: var(--main-color);
     border: 1px solid var(--main-color);
 }
-.people-card .contact-options a:hover span {
+ .contact-options a:hover span {
     color: var(--main-color) !important;
 }
 
@@ -2928,3 +2928,37 @@ text-decoration: none;
   padding-top: 10px;
   border-top:1px solid var(--border-color);;
 }
+.modal-content {
+  
+    background-color: var(--card-color);}
+    .tittle{
+       
+        color: var(--head-color);
+      
+    }
+    .communities .card-img-top {
+        width: 100%;
+        height: 70px;
+        object-fit: cover;
+   
+
+    }
+    .profile-img-container {
+         width: 80px;
+    height: 80px;
+ 
+   
+    display: flex
+;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 .5rem rgba(0, 0, 0, .15);
+        margin-top: -40px;
+ 
+ 
+    }
+       .profile-img-container img{  
+         border-radius: 50%;
+        width:80px;
+        height:80px;
+        object-fit: cover;}
